Fix overflow issue on help pages (#1421)

--- a/sass/base/_structure.scss
+++ b/sass/base/_structure.scss
@@ -11,7 +11,6 @@ body {
 }
 
 body {
-    @include clearfix;
     background: $bg--gray;
     position: relative;
     width: 100%;
